<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">Moneat Android E2E</string>
    <string name="welcome_title">Moneat E2E Testing</string>
    <string name="welcome_message">Test various error scenarios</string>
    
    <string name="error_crash">Trigger Crash</string>
    <string name="error_exception">Throw Exception</string>
    <string name="error_network">Network Error</string>
    <string name="error_anr">Simulate ANR</string>
    <string name="error_background">Background Crash</string>
    <string name="error_null">Null Pointer</string>

    <string name="performance_scenarios">Performance Scenarios</string>
    <string name="perf_transaction_ok">Transaction (Successful)</string>
    <string name="perf_transaction_slow">Transaction (Slow)</string>
    <string name="perf_transaction_fail">Transaction (Failed + Related Error)</string>

    <string name="user_feedback_section">User Feedback</string>
    <string name="user_feedback_button">Send User Feedback</string>
    
    <string name="test_results">Test Results</string>
    <string name="clear_log">Clear Log</string>
</resources>
